# nash_nav_ws

./: README.md
install/: local_setup.sh  setup.sh
install/nash_interfaces/share/nash_interfaces/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/nash_interfaces/share/nash_interfaces/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  export_nash_interfaces__rosidl_generator_cExport-noconfig.cmake  export_nash_interfaces__rosidl_generator_cExport.cmake  export_nash_interfaces__rosidl_generator_cppExport.cmake  export_nash_interfaces__rosidl_generator_pyExport-noconfig.cmake  export_nash_interfaces__rosidl_generator_pyExport.cmake  export_nash_interfaces__rosidl_typesupport_fastrtps_cExport-noconfig.cmake  export_nash_interfaces__rosidl_typesupport_fastrtps_cExport.cmake  export_nash_interfaces__rosidl_typesupport_fastrtps_cppExport-noconfig.cmake  export_nash_interfaces__rosidl_typesupport_fastrtps_cppExport.cmake  nash_interfacesConfig.cmake  nash_interfaces__rosidl_typesupport_cExport-noconfig.cmake  (+10 more)
install/nash_solver/lib/nash_solver/: conflict_resolver
install/nash_solver/share/nash_solver/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/nash_visualizer/lib/nash_visualizer/: visualizer
install/nash_visualizer/share/nash_visualizer/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/robot_navigator/lib/robot_navigator/: robot_agent
install/robot_navigator/share/robot_navigator/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/simulation/share/simulation/: package.sh  package.xml
src/nash_interfaces/: CMakeLists.txt  package.xml
src/nash_interfaces/msg/: NashDecision.msg
src/nash_solver/: package.xml  setup.cfg  setup.py
src/nash_solver/nash_solver/: conflict_resolver_node.py  game_theory.py
src/nash_visualizer/: package.xml  setup.cfg  setup.py
src/nash_visualizer/nash_visualizer/: visualizer_node.py
src/nash_visualizer/rviz/: nash_nav.rviz
src/robot_navigator/: package.xml  setup.py
src/robot_navigator/robot_navigator/: robot_agent_node.py
src/simulation/: package.xml  setup.py
src/simulation/launch/: nash_nav.launch.py
src/simulation/models/: robot1.sdf  robot2.sdf  robot3.sdf
src/simulation/worlds/: nash_world.world
tests/: test_conflict_scenarios.py  test_game_theory.py
(+54 files in other folders)
