<?xml version="1.0"?>
<package format="3">
  <name>nash_solver</name>
  <version>0.1.0</version>
  <description>Nash Equilibrium conflict resolver for multi-robot navigation</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>MIT</license>
  <depend>rclpy</depend>
  <depend>nash_interfaces</depend>
  <exec_depend>python3-numpy</exec_depend>
  <buildtool_depend>ament_python</buildtool_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>pytest</test_depend>
</package>
