<?xml version="1.0"?>
<package format="3">
  <name>robot_navigator</name>
  <version>0.1.0</version>
  <description>TurtleBot3 agent with Nash-based conflict resolution</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>MIT</license>
  <depend>rclpy</depend>
  <depend>nash_interfaces</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <buildtool_depend>ament_python</buildtool_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
